# pdftester_backend

./: .gitignore  main.py  output.txt  pyproject.toml  requirements.txt  test.ipynb
components/: databse_csv.py  processing_pdf.py
database_csv/: 24ee508a-f297-411f-bc78-36c5c3dbe9de.csv  7dc50aee-7415-47b8-8c37-c3a8b9f5b337.csv  a2b64e05-e77e-4645-ae24-33399353ab0c.csv  cdb79f97-2946-4ab6-a8d9-e60727ad92e6.csv  cfa0b3a4-4aae-48d0-a9a1-66b60b7e86ba.csv  e5da873c-6dba-4de6-891a-102a03bf6fd1.csv  e68bb44e-0d47-4fce-a63d-179a6c4ec7f1.csv  ea83719e-3f36-493d-8c37-7e13d34c08e5.csv  faff8e5d-4247-482c-8ce8-8c0c7aa193e0.csv  fbf66c7b-a72b-4e18-8a51-9aca70890a56.csv  questions.csv  tmp_insert_questions.csv
output_csv/: 1716206931.181411.csv
